--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.profiles.active=@profileActive@
 mybatis.mapperLocations=classpath:sqlmap/**/*.xml
 mybatis.config-location=classpath:Mybatis-config.xml
 
+logging.level.com.jd.b2b.shardingjdbc=debug
+
+#mybatis sql\u76F8\u5173\u65E5\u5FD7\u663E\u793A
+logging.level.org.mybatis.spring=DEBUG
+logging.level.java.sql.Connection=DEBUG
+logging.level.java.sql.PreparedStatement=DEBUG
+logging.level.java.sql.ResultSet=DEBUG
