--- a/pom.xml
+++ b/pom.xml
@@ -110,10 +110,17 @@
             <version>1.1.0</version>
         </dependency>
 
-        <dependency>
+        <!--测试swagger-->
+        <!--<dependency>
             <groupId>com.spring4all</groupId>
             <artifactId>spring-boot-starter-swagger</artifactId>
             <version>1.5.1.RELEASE</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.jd.ecc.commons</groupId>
+            <artifactId>ecc-commons-web</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
