--- a/src/main/resources/application-local-masterslave.properties
+++ b/src/main/resources/application-local-masterslave.properties
@@ -1,5 +1,7 @@
 spring.application.name=demo-shardingjdbc
-server.port=8907
+eureka.client.serviceUrl.defaultZone=http://192.168.171.124:18080/eureka
+server.port=8080
+
 
 #\u4E3B\u4ECE\u914D\u7F6E--1\u4E3B\u591A\u4ECE
 sharding.jdbc.datasource.names=ds_master,ds_slave_0,ds_slave_1
