--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.application.name=sharding-service
+
 #springcloud
 spring.profiles.active=@profileActive@
+eureka.instance.preferIpAddress=true
 
 #mybatis
 mybatis.mapperLocations=classpath:sqlmap/**/*.xml
@@ -14,7 +17,7 @@ logging.level.java.sql.PreparedStatement=DEBUG
 logging.level.java.sql.ResultSet=DEBUG
 
 # swagger \u914D\u7F6E
-#swagger.base-package=com.jd.b2b.shardingjdbc.web
+swagger.base-package=com.jd.b2b.shardingjdbc.web
 
 
 #swagger\uFFFD\uFFFD\uFFFD\uFFFD
