--- a/src/main/resources/application-b2b_pre1.properties
+++ b/src/main/resources/application-b2b_pre1.properties
@@ -1,6 +1,6 @@
 eureka.client.serviceUrl.defaultZone=http://192.168.8.3:8001/eureka/
 spring.application.name=sharding-service
-server.port=8907
+server.port=8080
 
 #\u4E3B\u4ECE\u914D\u7F6E--1\u4E3B\u591A\u4ECE
 sharding.jdbc.datasource.names=ds_master,ds_slave_0
@@ -20,11 +20,11 @@ sharding.jdbc.datasource.ds_slave_0.username=sharding
 sharding.jdbc.datasource.ds_slave_0.password=8Pe6arv1
 
 #\u4ECE\u5E932\u7684\u6570\u636E\u6E90
-sharding.jdbc.datasource.ds_slave_1.type=com.alibaba.druid.pool.DruidDataSource
-sharding.jdbc.datasource.ds_slave_1.driver-class-name=com.mysql.jdbc.Driver
-sharding.jdbc.datasource.ds_slave_1.url=jdbc:mysql://jddb-cn-north-1-acb932c728e8460b.jcloud.com:3306/?
-sharding.jdbc.datasource.ds_slave_1.username=sharding
-sharding.jdbc.datasource.ds_slave_1.password=8Pe6arv1  ?
+#sharding.jdbc.datasource.ds_slave_1.type=com.alibaba.druid.pool.DruidDataSource
+#sharding.jdbc.datasource.ds_slave_1.driver-class-name=com.mysql.jdbc.Driver
+#sharding.jdbc.datasource.ds_slave_1.url=jdbc:mysql://jddb-cn-north-1-acb932c728e8460b.jcloud.com:3306/sharding1?characterEncoding=utf8&connectTimeout=1000&autoReconnect=true
+#sharding.jdbc.datasource.ds_slave_1.username=sharding1
+#sharding.jdbc.datasource.ds_slave_1.password=8Pe6arv1
 
 # \u8BFB\u5199\u5206\u79BB\u89C4\u5219
 sharding.jdbc.config.masterslave.load-balance-algorithm-type=round_robin
