--- a/src/main/resources/application-local-sharding.properties
+++ b/src/main/resources/application-local-sharding.properties
@@ -56,6 +56,9 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 
+eureka.client.serviceUrl.defaultZone=http://192.168.171.124:18080/eureka
+server.port=8080
+
 
 
 
