--- a/src/main/resources/application-local-masterslave.properties
+++ b/src/main/resources/application-local-masterslave.properties
@@ -33,3 +33,10 @@ sharding.jdbc.config.masterslave.load-balance-algorithm-type=round_robin
 sharding.jdbc.config.masterslave.name=master_slave_1
 sharding.jdbc.config.masterslave.master-data-source-name=ds_master
 sharding.jdbc.config.masterslave.slave-data-source-names=ds_slave_0,ds_slave_1
+
+
+
+logging.level.com.alibaba.druid=debug
+
+# sql info
+sharding.jdbc.config.sharding.props.sql.show=true
