--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         </dependency>
 
 
-        <dependency>
+      <!--  <dependency>
             <groupId>io.shardingjdbc</groupId>
             <artifactId>sharding-jdbc-core</artifactId>
             <version>2.0.2</version>
@@ -90,7 +90,7 @@
             <groupId>io.shardingjdbc</groupId>
             <artifactId>sharding-jdbc-core-spring-boot-starter</artifactId>
             <version>2.0.2</version>
-        </dependency>
+        </dependency>-->
 
         <!-- druid 德鲁伊-->
         <!--<dependency>-->
@@ -118,11 +118,11 @@
             <version>1.5.1.RELEASE</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.jd.ecc.commons</groupId>-->
-            <!--<artifactId>ecc-commons-web</artifactId>-->
-            <!--<version>1.0.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.jd.ecc.commons</groupId>
+            <artifactId>ecc-commons-db</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
