--- a/src/main/resources/interceptor.ini
+++ b/src/main/resources/interceptor.ini
@@ -1,12 +1,20 @@
 #pre1对应的platformId
-[pre1]
--2
-20
-66
+[gw.b2b-v2-pre1.jcloudec.com]
+a = 20
+b = 66
+c = -2
 
-#gray应的platformId
-[gray]
+#v2对应的platformId
+[gw.b2b-v2.jcloudec.com]
+-2
+40
+
+#prod对应的platformId
+[gw.b2b-v2prod.jcloudec.com]
+-2
+50
+
+#gray对应的platformId
+[gw.b2b-v2gray.jcloudec.com]
 -2
 30
-40
-50
