--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,24 @@
         </dependency>
         <!--  ini 工具体类 end -->
 
+        <dependency>
+            <groupId>com.jd.ecc.commons</groupId>
+            <artifactId>ecc-commons-web</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-jackson</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
