--- a/src/main/resources/application-local-sharding.properties
+++ b/src/main/resources/application-local-sharding.properties
@@ -4,20 +4,36 @@ sharding.jdbc.datasource.names=demo_ds_0,demo_ds_1
 #\u914D\u7F6E\u7B2C\u4E00\u4E2A\u6570\u636E\u6E90
 sharding.jdbc.datasource.demo_ds_0.type=com.alibaba.druid.pool.DruidDataSource
 sharding.jdbc.datasource.demo_ds_0.driver-class-name=com.mysql.jdbc.Driver
-sharding.jdbc.datasource.demo_ds_0.url=jdbc:mysql://localhost:3306/demo_ds_0
+sharding.jdbc.datasource.demo_ds_0.url=jdbc:mysql://localhost:3307/demo_ds_0
 sharding.jdbc.datasource.demo_ds_0.username=root
 sharding.jdbc.datasource.demo_ds_0.password=123456
+
+#sharding.jdbc.datasource.demo_ds_0.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 #\u914D\u7F6E\u7B2C\u4E8C\u4E2A\u6570\u636E\u6E90
 sharding.jdbc.datasource.demo_ds_1.type=com.alibaba.druid.pool.DruidDataSource
 sharding.jdbc.datasource.demo_ds_1.driver-class-name=com.mysql.jdbc.Driver
-sharding.jdbc.datasource.demo_ds_1.url=jdbc:mysql://localhost:3306/demo_ds_1
+sharding.jdbc.datasource.demo_ds_1.url=jdbc:mysql://localhost:3307/demo_ds_1
 sharding.jdbc.datasource.demo_ds_1.username=root
 sharding.jdbc.datasource.demo_ds_1.password=123456
 
 #\u914D\u7F6E\u5206\u5E93\u7B56\u7565--\u6570\u636E\u88AB\u5206\u914D\u7684\u76EE\u6807\u6570\u636E\u6E90
-sharding.jdbc.config.sharding.default-database-strategy.inline.sharding-column=user_id
-sharding.jdbc.config.sharding.default-database-strategy.inline.algorithm-expression=demo_ds_${user_id % 2}
+#sharding.jdbc.config.sharding.default-database-strategy.inline.sharding-column=user_id
+#sharding.jdbc.config.sharding.default-database-strategy.inline.algorithm-expression=demo_ds_${user_id % 2}
+
+##  \u5355\u5206\u7247\u952E
+#sharding.jdbc.config.sharding.default-database-strategy.standard.sharding-column=user_id
+#sharding.jdbc.config.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.jd.b2b.shardingjdbc.web.algorithm.ModuloPreciseDatabaseShardingAlgorithm
+#
+#sharding.jdbc.config.sharding.default-database-strategy.standard.range-algorithm-class-name=com.jd.b2b.shardingjdbc.web.algorithm.ModuloRangeDatabaseShardingAlgorithm
+
+## \u591A\u5206\u7247
+#sharding.jdbc.config.sharding.default-database-strategy.complex.sharding-columns=user_id
+#sharding.jdbc.config.sharding.default-database-strategy.complex.algorithm-class-name=com.jd.b2b.shardingjdbc.web.algorithm.ModuloComplexDatabaseShardingAlgorithm
+
+## \u5F3A\u5236
+sharding.jdbc.config.sharding.default-database-strategy.hint.sharding-columns=user_id
+sharding.jdbc.config.sharding.default-database-strategy.hint.algorithm-class-name=com.jd.b2b.shardingjdbc.web.algorithm.ModuloHintDatabaseShardingAlgorithm
 
 #\u914D\u7F6Eorder\u8868\u89C4\u5219
 sharding.jdbc.config.sharding.tables.t_order.actual-data-nodes=demo_ds_${0..1}.t_order_${0..1}
@@ -34,30 +50,40 @@ sharding.jdbc.config.sharding.tables.t_order_item.key-generator-column-name=orde
 
 # sql info
 sharding.jdbc.config.sharding.props.sql.show=true
+#\u81EA\u5B9A\u4E49\u4E3B\u952E\u751F\u6210\u7C7B
+sharding.jdbc.config.sharding.default-key-generator-class=com.jd.b2b.shardingjdbc.web.key.CustomKeyGenerator
+
+sharding.jdbc.config.sharding.config-map.demo_ds_0=2
+sharding.jdbc.config.sharding.config-map.demo_ds_1=1
+
+# \u542F\u52A8\u8BFB\u5199\u5206\u79BB\u914D\u7F6E
+sharding.jdbc.config.enable=true
+eureka.client.enabled=false
+
 #druid
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.filters=stat
-spring.datasource.maxActive=20
-spring.datasource.initialSize=1
-spring.datasource.maxWait=60000
-spring.datasource.minIdle=1
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=select 'x'
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxOpenPreparedStatements=20
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.filters=stat
+#spring.datasource.maxActive=20
+#spring.datasource.initialSize=1
+#spring.datasource.maxWait=60000
+#spring.datasource.minIdle=1
+#spring.datasource.timeBetweenEvictionRunsMillis=60000
+#spring.datasource.minEvictableIdleTimeMillis=300000
+#spring.datasource.validationQuery=select 'x'
+#spring.datasource.testWhileIdle=true
+#spring.datasource.testOnBorrow=false
+#spring.datasource.testOnReturn=false
+#spring.datasource.poolPreparedStatements=true
+#spring.datasource.maxOpenPreparedStatements=20
 
-spring.datasource.url=jdbc:mysql://localhost:3306/%s
-spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/%s
+#spring.datasource.username=root
+#spring.datasource.password=123456
 
 
-eureka.client.serviceUrl.defaultZone=http://192.168.171.124:18080/eureka
-server.port=8080
+#eureka.client.serviceUrl.defaultZone=http://192.168.171.124:18080/eureka
+#server.port=8080
 
 
 
