--- a/src/main/resources/application-local-masterslave.properties
+++ b/src/main/resources/application-local-masterslave.properties
@@ -94,3 +94,6 @@ sharding.jdbc.config.enable=true
 
 sharding.jdbc.config.masterslave.config-map.ds_slave_0= 1
 sharding.jdbc.config.masterslave.config-map.ds_slave_1= 4
+
+
+ecc.service.feignlog.enable=true
